2007-10-16  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/category/BarRenderer3D.java
	(drawRangeMarker): Use adjusted data area;
	* source/org/jfree/chart/renderer/category/LineRenderer3D.java
	(drawRangeMarker): Use adjusted data area, and call super to hanle
	IntervalMarker (DG);

2007-10-11  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/category/MultiValueRenderer.java:
	Renamed ScatterRenderer.java;
	* tests/org/jfree/chart/renderer/category/junit/MultiValueRendererTests.java:
	Renamed ScatterRendererTests.java.

2007-10-11  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/ThermometerPlot.java
	(DEFAULT_GAP_RADIUS): Renamed DEFAULT_GAP,
	(gapRadius): Renamed gap,
	(getGapRadius): Renamed getGap(),
	(setGapRadius): Renamed setGap(),
	(getGapDiameter): Removed,
	(draw): Updated for method name changes,
	(equals): Likewise.

2007-10-08  David Gilbert  <david.gilbert@object-refinery.com>

	Based on Patch 1769088:
	* source/org/jfree/chart/plot/ThermometerPlot.java
	(BULB_RADIUS): Deprecated,
	(BULB_DIAMETER): Likewise,
	(COLUMN_RADIUS): Likewise,
	(COLUMN_DIAMETER): Likewise,
	(GAP_RADIUS): Likewise,
	(GAP_DIAMETER): Likewise,
	(bulbRadius): New field,
	(columnRadius): Likewise,
	(gapRadius): Likewise,
	(getBulbRadius): New method,
	(setBulbRadius): Likewise,
	(getBulbDiameter): Likewise,
	(getColumnRadius): Likewise,
	(setColumnRadius): Likewise,
	(getColumnDiameter): Likewise,
	(getGapRadius): Likewise,
	(setGapRadius): Likewise,
	(getGapDiameter): Likewise,
	(draw): Use attributes rather than constants,
	(equals): Updated for new fields,
	* tests/org/jfree/chart/plot/junit/ThermometerPlotTests.java
	(testEquals): Updated for new fields.

2007-10-08  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/category/MultiShapeRenderer.java: 
	New file,