@@ -45,6 +45,7 @@
  * ------------- JFREECHART 1.0.x --------------------------------------------
  * 26-Jan-2006 : Minor API doc update (DG);
  * 25-Jan-2007 : Added new constructor and fixed bug in clone() method (DG);
+ * 16-Oct-2007 : Removed redundant code (DG);
  * 
  */
 
@@ -81,9 +82,6 @@ public class AbstractXYItemLabelGenerator implements Cloneable, Serializable {
 
     /** A date formatter for the y value. */
     private DateFormat yDateFormat;
-
-    /** The string used to represent 'null' for the x-value. */
-    private String nullXString = "null";
     
     /** The string used to represent 'null' for the y-value. */
     private String nullYString = "null";
@@ -265,16 +263,11 @@ public class AbstractXYItemLabelGenerator implements Cloneable, Serializable {
         result[0] = dataset.getSeriesKey(series).toString();
         
         double x = dataset.getXValue(series, item);
-        if (Double.isNaN(x) && dataset.getX(series, item) == null) {
-            result[1] = this.nullXString;
+        if (this.xDateFormat != null) {
+            result[1] = this.xDateFormat.format(new Date((long) x));   
         }
         else {
-            if (this.xDateFormat != null) {
-                result[1] = this.xDateFormat.format(new Date((long) x));   
-            }
-            else {
-                result[1] = this.xFormat.format(x);
-            }
+            result[1] = this.xFormat.format(x);
         }
         
         double y = dataset.getYValue(series, item);
